# MySSG

./: Ideation.md  README.md  converted_test.md  pyproject.toml  template.html  test.md  test.py
RV-1.32.5__page/: display.md  mdata.json
constants/: consts.py
pageparser/: __init__.py  pagemaker.py  preprocessor.py  transliteration.py
parser/: html_converter.py  preprocessor.py  transliteration.py  transliterator.py
sitenav/: tree.py
siteparser/: siteparseutils.py  test.py
ssg_/: __init__.py  __main__.py
ssg_/static/: style.css
