[project]
name = "myssg"
version = "0.1.0"
description = ""
authors = [
    {name = "imsasankvindamuri",email = "imsasankvindamuri@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "markdown2 (>=2.5.3,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
pytest = "^8.3.5"

